--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -10,6 +10,7 @@
     border: var(--border-color);
     text-align: center;
     margin-bottom: 10px;
+    font-family: var(--font-heading);
 }
 .skill-heading p{
     font-size: 40px;
@@ -77,7 +78,7 @@
         font-size: 30px;
     }
     .technology{
-        font-size: 11px;
+        font-size: 12px;
     }
     .skill-main-types-box{
         flex-basis: 25%;
