--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Science+Gothic:wght@100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -8,11 +9,17 @@
     scroll-behavior: smooth;
 }
 body{
-    background: linear-gradient(90deg, rgb(3, 3, 31) 0%, rgba(3, 0, 0, 1) 50%, rgb(1, 2, 31) 100%);
+    /* background: linear-gradient(90deg, rgb(3, 3, 31) 0%, rgba(3, 0, 0, 1) 50%, rgb(1, 2, 31) 100%); */
+    /* background: url(./assets/backgound.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    background-color: black;
     color: white;
 }
 :root{
     /* --border-color:2px solid white; */
     --font-family:"Lexend", sans-serif;
     --color:#13ff00;
+    --font-heading:"Science Gothic", sans-serif;
 } 
