--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -27,6 +27,7 @@
     font-size: 40px;
     padding-left: 100px;
     margin-bottom: 30px;
+    font-family: var(--font-heading);
 }
 .about-main-firstchild-heading p,
 .about-main-secondchild-heading p{
