--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,7 +15,8 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    background: linear-gradient(90deg, rgb(3, 3, 31) 0%, rgba(3, 0, 0, 1) 50%, rgb(1, 2, 31) 100%);
+    /* background: linear-gradient(90deg, rgb(3, 3, 31) 0%, rgba(3, 0, 0, 1) 50%, rgb(1, 2, 31) 100%); */
+    background-color: black;
 }
 
 .fade-in {
